# arXiv-mcp

./: README.md  pyproject.toml
src/arxiv_mcp/: __init__.py  models.py  server.py
