[project]
name = "arxiv-mcp"
version = "0.2.0"
description = "A Model Context Protocol server for arXiv paper search and retrieval"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ray Tien" }]
requires-python = ">=3.10"
keywords = ["mcp", "arxiv", "claude", "ai", "research", "papers"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
	"mcp>=1.5.0",
	"httpx>=0.28.0",
	"beautifulsoup4>=4.13.0",
	"pydantic>=2.10.0",
]

[project.scripts]
arxiv-mcp = "arxiv_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Ray0907/arXiv-mcp"
Repository = "https://github.com/Ray0907/arXiv-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_mcp"]

[tool.uv]
dev-dependencies = [
	"pytest>=8.0.0",
	"pytest-asyncio>=0.24.0",
]
